infrastructure/apps/core/longhorn/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn-ui
  namespace: longhorn-system
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-dns-namecheap"
spec:
  parentRefs:
    - name: main-gateway
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - "longhorn.homelab.taylandogan.info"
  rules:
    - backendRefs:
        - name: longhorn-frontend
          port: 80
